[package]
name = "omnidragon-vanity-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = "2.0"
tokio = { version = "1.0", features = ["full"] }
hex = "0.4"
sha3 = "0.10"
rayon = "1.7"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3 