[package]
name = "vanity-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
ethers = "2.0"
hex = "0.4"
keccak-hash = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rayon = "1.8"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] } 